# perception-voice

./: .gitignore  README.md  config.example.yml  perception-voice.service  pyproject.toml
docs/: PLAN.md
perception_voice/: __init__.py  buffer.py  cli.py  client.py  config.py  ipc.py  server.py  transcriber.py  vad.py
